--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     <ul>
                         <li><span>2023</span><br>SK Somaiya College </li>
                         <li><span>2020</span><br>NIOS National Insitute Of Open Schooling Dubai,UAE</li>
-                        <li><span>2018</span><br>Gemes Our Own Indian School Dubai, UAE</li>
+                        <li><span>2018</span><br>Gems Our Own Indian School Dubai, UAE</li>
                     </ul>
                 </div>
             </div>
@@ -150,8 +150,8 @@
         <div class="row">
             <div class="contact-left">
                 <h1 class="sub-title">Contact Me</h1>
-                <P><i class="fa-solid fa-paper-plane"></i> <a href="mailto:16varunvelegar@gmail.com">16varunvelegar@gmail.com</a></P>
-                <P><i class="fa-solid fa-square-phone"></i> <a href="tel:+91 9321858518">+91 9321858518</a></P>
+                <ph><i class="fa-solid fa-paper-plane"></i> <a href="mailto:16varunvelegar@gmail.com">16varunvelegar@gmail.com</a></ph>
+                <ph><i class="fa-solid fa-square-phone"></i> <a href="tel:+91 9321858518">+91 9321858518</a></ph>
                 <div class="social-icons">
                     <a href="https://www.instagram.com/spamsssvarun._?igsh=OW8weTcwd250cWN2" target="_blank"><i class="fa-brands fa-instagram"></i></a>
                     <a href="https://www.linkedin.com/in/varun-velegar-614a1b276/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
