--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@
         <div class="row">
             <div class="contact-left">
                 <h1 class="sub-title">Contact Me</h1>
-                <ph><i class="fa-solid fa-paper-plane"></i> <a href="mailto:16varunvelegar@gmail.com">16varunvelegar@gmail.com</a></ph>
-                <ph><i class="fa-solid fa-square-phone"></i> <a href="tel:+91 9321858518">+91 9321858518</a></ph>
+                <h><i class="fa-solid fa-paper-plane"></i> <a href="mailto:16varunvelegar@gmail.com">16varunvelegar@gmail.com</a></h>
+                <h><i class="fa-solid fa-square-phone"></i> <a href="tel:+91 9321858518">+91 9321858518</a></h>
                 <div class="social-icons">
                     <a href="https://www.instagram.com/spamsssvarun._?igsh=OW8weTcwd250cWN2" target="_blank"><i class="fa-brands fa-instagram"></i></a>
                     <a href="https://www.linkedin.com/in/varun-velegar-614a1b276/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
